[gd_scene load_steps=8 format=3 uid="uid://c8gg00p8d2fnh"]

[ext_resource type="Script" uid="uid://b4utvpq8ffdrx" path="res://gui/tool/procedural_spritesheet_generator.gd" id="1_jwb04"]
[ext_resource type="Script" uid="uid://d3m30gnjkk2fk" path="res://gui/tool/canvas_generator.gd" id="2_iw0pq"]
[ext_resource type="Texture2D" uid="uid://b86yurx4bla0q" path="res://gui/examples/sword.png" id="3_iw0pq"]
[ext_resource type="Theme" uid="uid://cqx0fbjoxb8cm" path="res://gui/themes/pixel_theme.tres" id="4_tyxp6"]
[ext_resource type="StyleBox" uid="uid://bpylyo2oc0jm7" path="res://gui/themes/style_box_flat_darker_blue.tres" id="5_7lvw6"]
[ext_resource type="Script" uid="uid://drftl0m4p8c00" path="res://gui/tool/subregion_rect_input.gd" id="6_iw0pq"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_eiew4"]
size = Vector2(64, 64)

[node name="ProceduralSpritesheetGenerator" type="Node2D"]
script = ExtResource("1_jwb04")
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(16, 16)
render_target_update_mode = 4

[node name="CanvasGenerator" type="Node2D" parent="SubViewport"]
unique_name_in_owner = true
script = ExtResource("2_iw0pq")

[node name="InputSprite" type="Sprite2D" parent="."]
position = Vector2(552, 136)

[node name="ViewportSprite" type="Sprite2D" parent="."]
position = Vector2(552, 160)
texture = ExtResource("3_iw0pq")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("4_tyxp6")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="UI"]
layout_mode = 0
offset_right = 480.0
offset_bottom = 270.0

[node name="ScrollContainer" type="ScrollContainer" parent="UI/PanelContainer"]
layout_mode = 2
vertical_scroll_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2

[node name="InputContainer" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UploadBtn" type="Button" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upload Image"

[node name="InputImageContainer" type="PanelContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer"]
custom_minimum_size = Vector2(128, 112)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("5_7lvw6")

[node name="InputImageSizeLabel" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer/InputImageContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 1, 1, 0.607843)
text = "No image"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer/InputImageContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer/InputImageContainer/ScrollContainer"]
layout_mode = 2

[node name="InputTexture" type="TextureRect" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/MarginContainer/InputContainer/InputImageContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_eiew4")
stretch_mode = 4
script = ExtResource("6_iw0pq")

[node name="EffectsContainer" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effect"

[node name="EffectOptionButton" type="OptionButton" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Linear Smear"
popup/item_0/id = 0
popup/item_1/text = "Rotation Smear"
popup/item_1/id = 1

[node name="EffectsContainer" type="PanelContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer"]
custom_minimum_size = Vector2(307, 112)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("5_7lvw6")

[node name="EffectControlsContainer" type="ScrollContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 2

[node name="LinearSmearContainer" type="GridContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0
columns = 2

[node name="Direction" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3
text = "Direction (Degrees)"
vertical_alignment = 1

[node name="DirectionInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -360.0
max_value = 360.0
alignment = 2

[node name="Distance" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Distance"

[node name="SmearLengthInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 360.0
value = 8.0
alignment = 2

[node name="NumFrames" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "# Frames"

[node name="FrameCountInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 4.0
rounded = true
alignment = 2

[node name="NumTrailFrames" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "# Trail Frames"

[node name="LinearTrailFramesInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/LinearSmearContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
max_value = 8.0
alignment = 2

[node name="RotationSmearContainer" type="GridContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 0
columns = 2

[node name="Direction" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3
text = "Direction"
vertical_alignment = 1

[node name="RotationDirectionInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
min_value = -1.0
max_value = 1.0
alignment = 2

[node name="RotationDirectionOption" type="OptionButton" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Clockwise"
popup/item_0/id = 0
popup/item_1/text = "Counterclockwise"
popup/item_1/id = 1

[node name="Rotation" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Total Rotation (Degrees)"

[node name="RotationDegreesInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
max_value = 360.0
value = 90.0
alignment = 2

[node name="NumFrames" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "# Frames"

[node name="RotationFramesInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
max_value = 8.0
value = 4.0
rounded = true
alignment = 2

[node name="NumTrailFrames" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "# Trail Frames"

[node name="RotationTrailFramesInput" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
max_value = 8.0
rounded = true
alignment = 2

[node name="Subregion" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
tooltip_text = "Apply smear effect to a subregion of the uploaded image."
mouse_filter = 0
text = "Subregion"

[node name="SubregionCheckbox" type="CheckBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SubregionX1" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="LabelX1" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer/SubregionX1"]
layout_mode = 2
text = "x1"

[node name="SpinBoxX1" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer/SubregionX1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
rounded = true
alignment = 2

[node name="SubregionY1" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 2

[node name="LabelY1" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer/SubregionY1"]
layout_mode = 2
text = "y1"

[node name="SpinBoxY1" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer/SubregionY1"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SubregionX2" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 2

[node name="LabelX2" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2/SubregionX2"]
layout_mode = 2
text = "x2"

[node name="SpinBoxX2" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2/SubregionX2"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
alignment = 2

[node name="SubregionY2" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 2
alignment = 2

[node name="LabelY2" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2/SubregionY2"]
layout_mode = 2
text = "y2"

[node name="SpinBoxY2" type="SpinBox" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/HBoxContainer/EffectsContainer/EffectsContainer/EffectControlsContainer/MarginContainer/RotationSmearContainer/HBoxContainer2/SubregionY2"]
unique_name_in_owner = true
layout_mode = 2
rounded = true
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="MainButtons" type="HBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/MarginContainer/MainButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Output"

[node name="GenerateBtn" type="Button" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/MarginContainer/MainButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Generate"

[node name="SaveBtn" type="Button" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/MarginContainer/MainButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Save"

[node name="OutputContainer" type="PanelContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2.815)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("5_7lvw6")

[node name="ScrollContainer" type="ScrollContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 4
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="OutputAnimatedTexture" type="TextureRect" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 4

[node name="OutputAnimatedSprite" type="Sprite2D" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer/MarginContainer/VBoxContainer/OutputAnimatedTexture"]
unique_name_in_owner = true
centered = false

[node name="OutputTexture" type="TextureRect" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 4

[node name="OutputSprite" type="Sprite2D" parent="UI/PanelContainer/ScrollContainer/VBoxContainer/OutputContainer/ScrollContainer/MarginContainer/VBoxContainer/OutputTexture"]
unique_name_in_owner = true
centered = false

[node name="SpriteUpload" type="FileDialog" parent="UI"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(320, 240)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="SaveSpritesheet" type="FileDialog" parent="UI"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Save Spritesheet"
initial_position = 1
size = Vector2i(384, 240)
access = 2
filters = PackedStringArray("*.png")
use_native_dialog = true

[node name="AlertDialog" type="AcceptDialog" parent="UI"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(130, 70)
theme = ExtResource("4_tyxp6")
dialog_text = "Missing input image!"
dialog_autowrap = true

[node name="SaveSuccessDialog" type="AcceptDialog" parent="UI"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Success!"
initial_position = 1
size = Vector2i(256, 96)
dialog_text = "Saved image.png"
dialog_autowrap = true
